--- a/dotfiles/polybar/config.ini
+++ b/dotfiles/polybar/config.ini
@@ -151,7 +151,7 @@ click-right = pavucontrol &
 type = internal/memory
 interval = 2
 format-prefix-foreground = #00e600
-label = "%{A1:alacritty -e vtop &:}󰍛 %percentage_used:2%%{A}"
+label = "%{A1:kitty -e vtop &:}󰍛 %percentage_used:2%%{A}"
 # label = "%{A1:alacritty -e htop &:}%{F#b8bb26}󰍛%{F-} %percentage_used:2%%{A}"
 
 [module/date]
@@ -189,17 +189,17 @@ type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = "%{A1:alacritty -e nmtui &:}󰖪 disconnected%{A}"
+label-disconnected = "%{A1:kitty -e nmtui &:}󰖪 disconnected%{A}"
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = "%{A1:alacritty -e nmtui &:}󰖩 %signal%%{A}"
+label-connected = "%{A1:kitty -e nmtui &:}󰖩 %signal%%{A}"
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = "%{A1:alacritty -e nmtui &:}󰖩 %signal%%{A}"
+label-connected = "%{A1:kitty -e nmtui &:}󰖩 %signal%%{A}"
 
 [settings]
 screenchange-reload = true
