--- a/dotfiles/cava/config
+++ b/dotfiles/cava/config
@@ -210,23 +210,23 @@ source = /tmp/mpd.fifo
 
 gradient = 1
 
-# gradient_color_1 = '#938579'
-# gradient_color_2 = '#977f6d'
-# gradient_color_3 = '#9c7863'
-# gradient_color_4 = '#a2705b'
-# gradient_color_5 = '#a76855'
-# gradient_color_6 = '#ac5e51'
-# gradient_color_7 = '#b15450'
-# gradient_color_8 = '#b54851'
+gradient_color_1 = '#938579'
+gradient_color_2 = '#977f6d'
+gradient_color_3 = '#9c7863'
+gradient_color_4 = '#a2705b'
+gradient_color_5 = '#a76855'
+gradient_color_6 = '#ac5e51'
+gradient_color_7 = '#b15450'
+gradient_color_8 = '#b54851'
 
-gradient_color_1 = '#948694'
-gradient_color_2 = '#977f97'
-gradient_color_3 = '#9c789c'
-gradient_color_4 = '#a270a2'
-gradient_color_5 = '#a768a7'
-gradient_color_6 = '#ac5eac'
-gradient_color_7 = '#b154b1'
-gradient_color_8 = '#b548b5'
+# gradient_color_1 = '#948694'
+# gradient_color_2 = '#977f97'
+# gradient_color_3 = '#9c789c'
+# gradient_color_4 = '#a270a2'
+# gradient_color_5 = '#a768a7'
+# gradient_color_6 = '#ac5eac'
+# gradient_color_7 = '#b154b1'
+# gradient_color_8 = '#b548b5'
 
 # gradient_color_1 = '#a5a5a5'
 # gradient_color_2 = '#afafaf'
