--- a/dotfiles/picom/picom.conf
+++ b/dotfiles/picom/picom.conf
@@ -1,9 +1,11 @@
+vsync = true;
 backend = "glx"
 fading = false;
 
-# xprop command to find window class
+# To find window class use the 'xprop' command
 opacity-rule = [
-    "79:class_g = 'Zathura'",
-    "79:class_g = 'Code'",
-    "79:class_g = 'kitty'"
+    "78:class_g = 'Zathura'",
+    "78:class_g = 'Code'",
+    "78:class_g = 'kitty'",
+    "78:class_g = 'Alacritty'"
 ];
