--- a/dotfiles/polybar/config.ini
+++ b/dotfiles/polybar/config.ini
@@ -151,7 +151,7 @@ click-right = pavucontrol &
 type = internal/memory
 interval = 2
 format-prefix-foreground = #00e600
-label = "%{A1:kitty -e vtop &:}󰍛 %percentage_used:2%%{A}"
+label = "%{A1:kitty -e vtop --theme brew &:}󰍛 %percentage_used:2%%{A}"
 # label = "%{A1:alacritty -e htop &:}%{F#b8bb26}󰍛%{F-} %percentage_used:2%%{A}"
 
 [module/date]
