--- a/dotfiles/polybar/config.ini
+++ b/dotfiles/polybar/config.ini
@@ -1,7 +1,6 @@
 ; https://github.com/polybar/polybar/wiki/
 
-; colorscheme
-include-file = /home/max/.config/polybar/colors/transparent-mono-dark.ini
+include-file = ~/.config/polybar/theme.ini
 
 [fonts]
 main = "JetBrainsMono NF:style=regular;2"
@@ -119,8 +118,7 @@ port = 6600
 interval = 2
 
 format-online = <label-song>
-; label-song = "%{A1: mpc toggle &:}󰝚  %artist% - %title:0:55%%{A}"
-label-song = "%{A1: mpc toggle &:}󰝚  %artist% - %title%%{A}"
+label-song = "%{A1: mpc toggle &:}󰝚  %artist% - %title:0:25:...%%{A}"
 
 format-offline = <label-offline>
 label-offline = "%{A1: mpd &:}󰝛 mpd%{A}"
@@ -132,13 +130,13 @@ format = <label>
 format-padding = 4
 format-foreground = ${colors.foreground}
 format-background = ${colors.background-alt}
-label = %title:0:30:...%
+label = %title:0:25:...%
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
 interval = 2
-# format-volume-prefix-foreground = ${colors.foreground}
+# format-volume-prefix-foreground = ${colors.green}
 format-volume = <label-volume>
 
 label-volume = "󰕾 %percentage%"
@@ -152,7 +150,7 @@ type = internal/memory
 interval = 2
 format-prefix-foreground = #00e600
 label = "%{A1:kitty -e vtop --theme brew &:}󰍛 %percentage_used:2%%{A}"
-# label = "%{A1:alacritty -e htop &:}%{F#b8bb26}󰍛%{F-} %percentage_used:2%%{A}"
+; label = "%{A1:alacritty -e htop &:}%{F#9ccfd8}󰍛%{F-} %percentage_used:2%%{A}"
 
 [module/date]
 type = internal/date
