--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -24,8 +24,8 @@ set-option -g renumber-windows on
 # BIND-KEY
 bind-key j previous-window
 bind-key k next-window
-bind-key o choose-tree -Zs
-bind-key Space choose-tree -Zs \; send-keys /
+bind-key Space choose-tree -Zs
+bind-key o choose-tree -Zs \; send-keys /
 bind-key n new-window
 bind-key BSpace kill-window
 bind-key BSpace kill-pane
