--- a/dotfiles/i3/colors.conf
+++ b/dotfiles/i3/colors.conf
@@ -1,4 +1,4 @@
-set $borderColor #8cde8c
+set $borderColor #c4a7e7
 set $inactiveBorderColor #636f78
 default_border pixel 3
 client.focused $borderColor $borderColor $borderColor $borderColor
