--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -1,7 +1,7 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
@@ -25,12 +25,19 @@ set-option -g renumber-windows on
 bind-key j previous-window
 bind-key k next-window
 bind-key Space choose-tree -Zs
-bind-key o choose-tree -Zs \; send-keys /
+# bind-key o choose-tree -Zs \; send-keys /
 bind-key n new-window
 bind-key BSpace kill-window
 bind-key BSpace kill-pane
 bind s split-window -h -c "#{pane_current_path}"
 bind S split-window -v -c "#{pane_current_path}"
+
+# pane navigation
+bind L select-pane -R
+bind H select-pane -L
+bind K select-pane -U
+bind J select-pane -D
+
 bind-key m switch-client -t "music"
 
 ### tmux-resurrect
