Script to update bw.  Replace tmux plugin

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -1,6 +1,6 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
@@ -49,6 +49,8 @@ set -g @resurrect-strategy-nvim "session"
 set -g @continuum-restore 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
+
+
 
 # saves tmux environment every 15 minutes
 run-shell "nohup $HOME/.config/tmux/scripts/persist-reboots.sh >/dev/null 2>&1 &"
