--- a/dotfiles/i3/config
+++ b/dotfiles/i3/config
@@ -19,6 +19,7 @@ exec_always --no-startup-id xrdb ~/.Xresources
 # https://github.com/nwg-piotr/autotiling
 exec_always --no-startup-id autotiling
 exec_always --no-startup-id ~/.config/i3/scripts/get-connected-monitors.sh
+exec_always --no-startup-id ~/.config/i3/scripts/load-ssh.sh
 
 # -----------------------------------------------------------------------------
 # SYSTEM SETTINGS
