--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -22,13 +22,14 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 # BIND-KEY
-bind-key j previous-window
-bind-key k next-window
+# -r flag for repeat - that way you can hold down prefix and cycle windows
+bind-key -r j previous-window
+bind-key -r k next-window
 bind-key Space choose-tree -Zs
 # bind-key o choose-tree -Zs \; send-keys /
 bind-key n new-window
-bind-key BSpace kill-window
-bind-key BSpace kill-pane
+# bind-key BSpace kill-window
+# bind-key BSpace kill-pane
 bind s split-window -h -c "#{pane_current_path}"
 bind S split-window -v -c "#{pane_current_path}"
 
