--- a/dotfiles/.xsessionrc
+++ b/dotfiles/.xsessionrc
@@ -2,6 +2,9 @@ export EDITOR="neovim"
 export SUDO_EDITOR="neovim"
 export TERMINAL="alacritty"
 export BROWSER="brave-browser"
-export PATH="$HOME/.local/bin:$PATH:/usr/local/go/bin:$PATH:/$HOME/go/bin"
 export PAGER="less -R"
+
+export PATH="$PATH:$HOME/.local/bin"
+export PATH="$PATH:$HOME/go/bin"
+export PATH="$PATH:/usr/local/go/bin"
 
