--- a/scripts/hatch/ts/template/package.json
+++ b/scripts/hatch/ts/template/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "jtest",
-    "version": "1.0.0",
+    "name": "hatch-ts",
+    "version": "0.0.0",
     "description": "",
     "main": "./dist/index.js",
     "exports": {
@@ -13,7 +13,6 @@
         "test": "tsc && npx vitest",
         "lint": "eslint",
         "fix": "eslint --fix",
-        "dev": "tsc --watch",
         "update": "npx directlink --update"
     },
     "type": "module",
@@ -21,13 +20,14 @@
     "author": "",
     "license": "MIT",
     "devDependencies": {
-        "@mmorrissey5961/directlink": "^1.0.0",
-        "@types/node": "^22.15.21",
-        "vitest": "^3.1.4",
-        "eslint": "^9.27.0",
-        "eslint-plugin-react-hooks": "^5.2.0",
-        "globals": "^16.1.0",
-        "typescript-eslint": "^8.32.1"
+        "@mmorrissey5961/directlink": "*",
+        "@types/node": "*",
+        "dotenv": "*",
+        "eslint": "*",
+        "eslint-plugin-react-hooks": "*",
+        "globals": "*",
+        "typescript-eslint": "*",
+        "vitest": "*"
     },
     "directlinks": {}
 }
